Changelog 2021 Mar 07:
    -youtube-dl downloads and operates silently
    -Bot sets a status
    -stop command will notify if nothing playing

Changelog 2021 Mar 05:
    -play command will resume paused playback
    -announce command no longer requires quotes

Changelog 2021 Mar 04:
    -Fixed issue with bot listing certain video titles as "None"

Changelog 2021 Mar 03:
    -play and yt command now add to queue if a song is playing
    -Some more unhelpful comments
    -Underscores removed form commands for more uniform formatting

Changelog 2021 Mar 01:
    -Minor reformatting of the DM given upon removal of an offensive message
    -add_role and remove_role work either by @mentioning the role or listing the name
    -give_role added
    -role management system refactored
    

Changelog 2021 Feb 25:
    -Minor reformat to guild join messages
    -Discord Slash Commands integration will come as soon as that's officially supported

Changelog 2021 Feb 22:
    -Fixes to on_guild_join
    -on_guild_join now DMs the server owner
    -URL for the BasicBot website has been moved to an environment variable

Changelog 2021 Feb 05:
    -Added command: --server-info
    -Code cleanup and commands categorized in python file

Changelog 2021 Feb 04:
    -Bot prefix changed from '!basic_' to '--'
    -Code cleanup and modularity tweaks

Changelog 2021 Jan 31:
    -Easter egg in banning, can be enabled or disabled mid-run

Changelog 2021 Jan 30:
    -The bot can manage roles if given the right permissions
    -!basic_add_role can be used to give a role (if the user's top role is higher)
    -!basic_remove_role can be used to remove a role (if the user's top role is higher)

Changelog 2021 Jan 29:
    -The bot leaves a voice channel if it is empty, without prompting

Changelog 2021 Jan 28:
    -Added command alias: !basic_add for !basic_queue
    -Added command alias: !basic_next for !basic_skip
    -!basic_play now can do !basic_yt's job too (provided there's nothing playing).