@@ -1,3 +1,27 @@
-Racsism/Homophobia Keywords, 1 Term/Phrase Per Line:
 Banned Keyword Phrase Example
 BannedKeywordTermExample
+nigger
+nigga
+tranny
+chink
+gypsy
+oven dodger
+wetback
+zipperhead
+goyim
+christ-killer
+chinaman
+Hitler
+sodomite
+faggot
+ fag 
+cuntboy
+dickgirl
+ladyboy
+chicks with dicks
+transtrender
+Shirtlifter
+transvestite
+shemale
+skank
+grenade
